correction de la gestion du dark mode pour les icones, ajout d'une classe svg, changement langue dans l'index.html

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@
   background: none;
   border: none;
   cursor: pointer;
+  color: var(--body-txt-color)
+}
+
+.svg {
   filter: var(--filter) /* permet de changer la couleur suivant le mode clair/sombre */
 }
 
